[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvko"
version = "0.1.11"
description = "VK API utilities"
readme = "README.md"
authors = [
    { name = "Harry Djachenko", email = "i.s.djachenko@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["vk", "api", "social"]
dependencies = [
    "vk_api",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyvko"
"Bug Tracker" = "https://github.com/yourusername/pyvko/issues"
"Source Code" = "https://github.com/yourusername/pyvko"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: базовая связность, read-only",
    "create: создаёт ресурс в VK",
    "destructive: удаляет ресурс в VK",
]