[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvko"
version = "0.1.0"
description = "VK API typed wrapper library"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Igor Djachenko" }]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "mypy",
]
release = [
    "build",
    "python-semantic-release",
]

[project.urls]
Homepage = "https://github.com/djachenko/pyvko"
Repository = "https://github.com/djachenko/pyvko"
Issues = "https://github.com/djachenko/pyvko/issues"

[[tool.mypy.overrides]]
module = "pyvko.pyvko_runner"
ignore_errors = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version} [no ci]"
major_on_zero = false
allow_zero_version = true